[metadata]
name = esLib-EthanHindmarsh
version = 0.0.1
author = Ethan Hindmarsh
author_email = admin@c4ts.me
description = Functions and tools to automate Everskies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EthanHindmarsh/esLib
project_urls =
    Bug Tracker = https://github.com/EthanHindmarsh/esLib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Unlicensed
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

