[metadata]
name = everskies
version = 0.0.9
author = Ethan Hindmarsh
author_email = admin@c4ts.me
description = Functions and tools to automate Everskies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EthanHindmarsh/esLib
project_urls =
    Bug Tracker = https://github.com/EthanHindmarsh/esLib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    random_user_agent
    json
    requests

[options.packages.find]
where = src

